Mon Apr 19 15:17:12 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/WordList.cc(valid_word): fixed bug introduced Jan 9,
	where it stopped scanning for control characters prematurely.
	Now also use iscntrl() to detect all control characters.

Fri Apr 16 10:30:42 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/FAQ.html: fixed typo - use_meta_description was plural.

Wed Apr 14 20:22:31 1999  Alexander Bergolth  <leo@leo.wu-wien.ac.at>

	* htlib/regex.h: fixed compile problem with AIX xlc compiler

Tue Apr 13 13:01:04 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(generateStars): Set status to -1 if
	URLimage.hasPattern() fails, to avoid empty URLimageList.
	(Fix to Mar 31 change.)

Tue Apr 13 11:27:45 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.h(class Display): move enum SortType up to public
	section, to avoid problem compiling on IBM AIX C++ compiler.

Mon Apr 12 17:36:20 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/FAQ.html: added sections on indexing docs in other languages,
	practical & theoretical limits of ht://Dig.

Fri Apr  9 16:47:34 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/FAQ.html: Fixed a few typos.

Fri Apr  9 16:24:21 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc(RetrieveHTTP): Show "Unable to build connection"
	message at lower debug level.

Fri Apr  9 15:17:53 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/FAQ.html: Added changes in maindocs from Mar 18, a few
	clarifications, and four new questions.

Wed Apr  7 19:41:12 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/htsearch.cc (usage): Remove bogus -w flag.

Thu Apr  1 11:58:20 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/htsearch.cc(main): Apply Gabriele's patch to avoid using an
	invalid matchesperpage CGI input variable.
