@@ -1,3 +1,11 @@
+Mon Apr 19 15:40:24 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htcommon/WordList.cc(valid_word): fixed to avoid having the new
+	HtIsStrictWordChar() test circumvent the allow_numbers option by
+	allowing numbers all the time. Also fixed to allow HtIsStrictWordChar()
+	to override iscntrl(), so extra_word_characters can define characters
+	that a broken locale would define as control characters.
+
 Mon Apr 19 15:17:12 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htcommon/WordList.cc(valid_word): fixed bug introduced Jan 9,
